# lightwave-3d

./: Cargo.toml  LICENSE  README.md
src/: binrw_helpers.rs  iff.rs  lib.rs
src/lwo2/: mod.rs
src/lwo2/sub_tags/: mod.rs  plugin.rs  surface_parameters.rs
src/lwo2/sub_tags/blocks/: gradient_texture.rs  image_texture.rs  mod.rs  procedural_texture.rs  texture_mapping.rs
src/lwo2/tags/: bounding_box.rs  discontinuous_vertex_mapping.rs  envelope.rs  image_clip.rs  layer.rs  meta.rs  mod.rs  point_list.rs  polygon_list.rs  polygon_tag_mapping.rs  surface_definition.rs  tag_strings.rs  vertex_map_parameter.rs  vertex_mapping.rs
