[package]
name = "lightwave-3d"
version = "1.0.0"
authors = ["Thea Schöbl <dev@theaninova.de>"]
edition = "2021"
description = "LightWave 3D Parser"
readme = "README.md"
repository = "https://github.com/Theaninova/lightwave-3d"
license = "MIT"
keywords = ["lightwave3d", "binrw"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
